[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/League.gd" type="Script" id=1]
[ext_resource path="res://Objects/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/Menu.tres" type="Theme" id=3]
[ext_resource path="res://Objects/ClassificationTable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Notification.tscn" type="PackedScene" id=6]
[ext_resource path="res://Images/Trophy.png" type="Texture" id=7]

[node name="League" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Money" type="Label" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 10.0
margin/top = 80.0
margin/right = 210.0
margin/bottom = 10.0
text = "$ 0"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Classification" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2720.0
margin/top = 0.0
margin/right = 3720.0
margin/bottom = 1080.0

[node name="ClassificationTitle" type="Label" parent="Classification"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 50.0
margin/right = 1000.0
margin/bottom = 120.0
text = "Classification"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ClassificationTable" parent="Classification" instance=ExtResource( 4 )]

margin/left = 3.0
margin/top = 120.0
margin/right = 1003.0
margin/bottom = 1020.0

[node name="ControlPanel" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 1920.0
margin/top = 0.0
margin/right = 2720.0
margin/bottom = 1080.0

[node name="NextMatchButton" type="Button" parent="ControlPanel"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 250.0
margin/top = 290.0
margin/right = 750.0
margin/bottom = 490.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Next Match"
flat = false
clip_text = true

[node name="OpponentName" type="Label" parent="ControlPanel/NextMatchButton"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 130.0
margin/right = 0.0
margin/bottom = 10.0
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
text = "vs Grasshoppers"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewLeagueButton" type="Button" parent="ControlPanel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 250.0
margin/top = 290.0
margin/right = 750.0
margin/bottom = 490.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "New League"
flat = false
clip_text = true

[node name="MenuButton" type="Button" parent="ControlPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 250.0
margin/top = 590.0
margin/right = 750.0
margin/bottom = 660.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Back to Menu"
flat = false

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Player" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 450, 780 )

[node name="Notification" parent="." instance=ExtResource( 6 )]

margin/left = -960.0
margin/top = 800.0
margin/right = 0.0
margin/bottom = 1000.0
from = Vector2( -960, 800 )
to = Vector2( 0, 800 )
time = 1.5
delay = 0.5

[node name="DoneNotification" parent="." instance=ExtResource( 6 )]

margin/left = -960.0
margin/top = 800.0
margin/right = 0.0
margin/bottom = 1000.0
icon = ExtResource( 7 )
from = Vector2( -960, 800 )
to = Vector2( 0, 800 )
time = 2.0
delay = 2.5

[connection signal="pressed" from="ControlPanel/NextMatchButton" to="." method="nextMatchButtonPressed"]

[connection signal="pressed" from="ControlPanel/NewLeagueButton" to="." method="newLeagueButtonPressed"]

[connection signal="pressed" from="ControlPanel/MenuButton" to="." method="menuButtonPressed"]


